src/objects/Help_Links__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <label>Detailed Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <label>Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Marketing_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Marketing Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Order_By__c</fullName>
        <label>Order By</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Youtube_ID__c</fullName>
        <label>Youtube ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Help Links</label>
</CustomObject>